Updates from Overleaf

--- a/name.tex
+++ b/name.tex
@@ -635,7 +635,7 @@ On active forms -- which, unlike the passive, are fully inflected for person and
     \end{tabular}
 
     
-    \caption{AUC Histograms for Verb Affixes: We show a smoothed histogram of baseline orderings, and the AUC values for optimized, real, and reverse orderings. For the real orderings, we also indicate what fraction of baseline grammars have higher AUC, with a Binomial confidence interval. \mhahn{TODO add missing bars}}
+    \caption{AUC Histograms for Verb Affixes: We show a smoothed histogram of baseline orderings, and the AUC values for optimized, real, and reverse orderings. For the real orderings, we also indicate what fraction of baseline grammars have higher AUC, with a Binomial confidence interval. }
     \label{fig:auc_verbs}
 \end{figure}
 
