Updates from Overleaf

--- a/figures/turkish_verbs/comparison.tex
+++ b/figures/turkish_verbs/comparison.tex
@@ -6,7 +6,7 @@ block/.style = {draw, fill=blue!30, align=center, anchor=west,
 ball/.style = {circle, draw, align=center, anchor=north, inner sep=0}]
 \node[rectangle,text width=1.2cm,anchor=base] (A0) at (1,-0.3) {Real};
 \node[rectangle,text width=0.9cm,anchor=base] (B0) at (4,-0.3) {Optimized};
-\node[rectangle,text width=1.2cm,anchor=base] (A1) at (1,-1.0) {Valence};
+\node[rectangle,text width=1.2cm,anchor=base, fill=orange!20] (A1) at (1,-1.0) {Valence};
 \node[rectangle,text width=1.2cm,anchor=base] (A2) at (1,-1.5) {Voice};
 \node[rectangle,text width=1.2cm,anchor=base] (A3) at (1,-2.0) {Polarity};
 \node[rectangle,text width=1.2cm,anchor=base] (A4) at (1,-2.5) {Politeness};
