--- a/figures/turkish_verbs/comparison.tex
+++ b/figures/turkish_verbs/comparison.tex
@@ -20,10 +20,10 @@ ball/.style = {circle, draw, align=center, anchor=north, inner sep=0}]
 \node[rectangle,text width=1.2cm,anchor=base] (B3) at (4,-2.0) {Polarity};
 \node[rectangle,text width=1.2cm,anchor=base, fill=blue!20] (B4) at (4,-2.5) {TAM 1};
 \node[rectangle,text width=1.2cm,anchor=base, fill=blue!20] (B5) at (4,-3.0) {Mood};
-\node[rectangle,text width=1.2cm,anchor=base, fill=purple!20] (B6) at (4,-3.5) {TAM 2};
-\node[rectangle,text width=1.2cm,anchor=base, fill=blue!20] (B7) at (4,-4.0) {3Pl};
-\node[rectangle,text width=1.2cm,anchor=base, fill=purple!20] (B8) at (4,-4.5) {Genitive};
-\node[rectangle,text width=1.2cm,anchor=base] (B9) at (4,-5.0) {Agreement};
+\node[rectangle,text width=1.2cm,anchor=base, fill=blue!20] (B6) at (4,-3.5) {TAM 2};
+\node[rectangle,text width=1.2cm,anchor=base, fill=purple!20] (B7) at (4,-4.0) {3Pl};
+\node[rectangle,text width=1.2cm,anchor=base] (B8) at (4,-4.5) {Genitive};
+\node[rectangle,text width=1.2cm,anchor=base, fill=purple!20] (B9) at (4,-5.0) {Agreement};
 \draw[->] (A1.east) to (B1.west);
 \draw[->] (A2.east) to (B2.west);
 \draw[->] (A3.east) to (B3.west);
