--- a/figures/sesotho_suffixes/comparison.tex
+++ b/figures/sesotho_suffixes/comparison.tex
@@ -7,21 +7,21 @@ ball/.style = {circle, draw, align=center, anchor=north, inner sep=0}]
 \node[rectangle,text width=1.2cm,anchor=base] (A0) at (1,-0.3) {Real};
 \node[rectangle,text width=0.9cm,anchor=base] (B0) at (4,-0.3) {Optimized};
 \node[rectangle,text width=1.2cm,anchor=base] (A1) at (1,-1.0) {Derivation};
-\node[rectangle,text width=1.2cm,anchor=base] (A2) at (1,-1.5) {Valence};
-\node[rectangle,text width=1.2cm,anchor=base] (A3) at (1,-2.0) {Tense/aspect};
-\node[rectangle,text width=1.2cm,anchor=base] (A4) at (1,-2.5) {Voice};
+\node[rectangle,text width=1.2cm,anchor=base, fill=orange!20] (A2) at (1,-1.5) {Valence};
+\node[rectangle,text width=1.2cm,anchor=base, fill=green!20] (A3) at (1,-2.0) {Voice};
+\node[rectangle,text width=1.2cm,anchor=base, fill=blue!20] (A4) at (1,-2.5) {Tense/aspect};
 \node[rectangle,text width=1.2cm,anchor=base] (A5) at (1,-3.0) {Mood};
 \node[rectangle,text width=1.2cm,anchor=base] (A6) at (1,-3.5) {Int/Rel};
-\node[rectangle,text width=1.2cm,anchor=base] (B1) at (4,-1.0) {Valence};
+\node[rectangle,text width=1.2cm,anchor=base, fill=orange!20] (B1) at (4,-1.0) {Valence};
 \node[rectangle,text width=1.2cm,anchor=base] (B2) at (4,-1.5) {Derivation};
-\node[rectangle,text width=1.2cm,anchor=base] (B3) at (4,-2.0) {Voice};
-\node[rectangle,text width=1.2cm,anchor=base] (B4) at (4,-2.5) {Tense/aspect};
+\node[rectangle,text width=1.2cm,anchor=base, fill=green!20] (B3) at (4,-2.0) {Voice};
+\node[rectangle,text width=1.2cm,anchor=base, fill=blue!20] (B4) at (4,-2.5) {Tense/aspect};
 \node[rectangle,text width=1.2cm,anchor=base] (B5) at (4,-3.0) {Int/Rel};
 \node[rectangle,text width=1.2cm,anchor=base] (B6) at (4,-3.5) {Mood};
 \draw[->] (A1.east) to (B2.west);
 \draw[->] (A2.east) to (B1.west);
-\draw[->] (A3.east) to (B4.west);
-\draw[->] (A4.east) to (B3.west);
+\draw[->] (A3.east) to (B3.west);
+\draw[->] (A4.east) to (B4.west);
 \draw[->] (A5.east) to (B6.west);
 \draw[->] (A6.east) to (B5.west);
 \end{tikzpicture}
