--- a/figures/japanese/comparison.tex
+++ b/figures/japanese/comparison.tex
@@ -7,16 +7,16 @@ ball/.style = {circle, draw, align=center, anchor=north, inner sep=0}]
 \node[rectangle,text width=1.2cm,anchor=base] (A0) at (1,-0.3) {Real};
 \node[rectangle,text width=0.9cm,anchor=base] (B0) at (4,-0.3) {Optimized};
 \node[rectangle,text width=1.2cm,anchor=base] (A1) at (1,-1.0) {Derivation};
-\node[rectangle,text width=1.2cm,anchor=base] (A2) at (1,-1.5) {Valence};
-\node[rectangle,text width=1.2cm,anchor=base] (A3) at (1,-2.0) {Voice/Mood};
+\node[rectangle,text width=1.2cm,anchor=base, fill=orange!20] (A2) at (1,-1.5) {Valence};
+\node[rectangle,text width=1.2cm,anchor=base, fill=green!20] (A3) at (1,-2.0) {Voice/Mood};
 \node[rectangle,text width=1.2cm,anchor=base, fill=blue!20] (A4) at (1,-2.5) {Mood};
 \node[rectangle,text width=1.2cm,anchor=base] (A5) at (1,-3.0) {Politeness};
 \node[rectangle,text width=1.2cm,anchor=base] (A6) at (1,-3.5) {Polarity};
 \node[rectangle,text width=1.2cm,anchor=base, fill=blue!20] (A7) at (1,-4.0) {Tense/Aspect};
 \node[rectangle,text width=1.2cm,anchor=base] (A8) at (1,-4.5) {Finiteness};
 \node[rectangle,text width=1.2cm,anchor=base] (B1) at (4,-1.0) {Derivation};
-\node[rectangle,text width=1.2cm,anchor=base] (B2) at (4,-1.5) {Valence};
-\node[rectangle,text width=1.2cm,anchor=base] (B3) at (4,-2.0) {Voice/Mood};
+\node[rectangle,text width=1.2cm,anchor=base, fill=orange!20] (B2) at (4,-1.5) {Valence};
+\node[rectangle,text width=1.2cm,anchor=base, fill=green!20] (B3) at (4,-2.0) {Voice/Mood};
 \node[rectangle,text width=1.2cm,anchor=base] (B4) at (4,-2.5) {Politeness};
 \node[rectangle,text width=1.2cm,anchor=base] (B5) at (4,-3.0) {Polarity};
 \node[rectangle,text width=1.2cm,anchor=base, fill=blue!20] (B6) at (4,-3.5) {Mood};
