Updates from Overleaf

--- a/name.tex
+++ b/name.tex
@@ -376,7 +376,7 @@ Stem-Plural-1sgPoss-Ablative\\
 
 %\mhahn{TODO make this a nice illustration of noun inflection appropriate for the audience}
 
-\caption{Noun inflection in the three languages in our sample. All three languages support Greenberg's Universal 39 by placing the case marker after the plural marker, but they differ in theplacement of the possessive marker.}\label{fig:noun-inflection}
+\caption{Noun inflection in the three languages in our sample. All three languages support Greenberg's Universal 39 by placing the case marker after the plural marker, but they differ in theplacement of the possessive marker. \mhahn{TODO make this look nicer, including color coding}}\label{fig:noun-inflection}
 \end{figure}
 
 
@@ -649,7 +649,7 @@ On active forms -- which, unlike the passive, are fully inflected for person and
     &
     \includegraphics[width=0.3\textwidth]{figures/hungarian_nouns/suffixes-byMorphemes-auc-hist-heldout-Coarse-FineSurprisal-optimized.pdf}
     \end{tabular}
-    \caption{AUC Histograms for Noun Suffixes: We show a smoothed histogram of baseline orderings, and the AUC values for optimized, real, and reverse orderings. For the real orderings, we also indicate what fraction of baseline grammars have higher AUC, with a Binomial confidence interval. \mhahn{TODO add missing bars}}
+    \caption{AUC Histograms for Noun Suffixes: We show a smoothed histogram of baseline orderings, and the AUC values for optimized, real, and reverse orderings. For the real orderings, we also indicate what fraction of baseline grammars have higher AUC, with a Binomial confidence interval. \mhahn{TODO add missing bars \& quantiles}}
     \label{fig:auc_nouns}
 \end{figure}
 
@@ -728,8 +728,8 @@ On active forms -- which, unlike the passive, are fully inflected for person and
   \end{tabular}
   
   
-    \caption{Real and optimized ordering for verb affixes.
-    \mhahn{TODO colors are missing in a few places}%\mhahn{TODO make sure the language-specific morpheme slots such as ``Genitive'' and ``Clitic'' aren't confusing for the reader. One option is to color-code the slots here as in the figure(s) earlier.}
+    \caption{Real and optimized ordering for verb affixes. Colors indicate universal position slots as in Figure~\ref{tab:examples-verbs}.
+    \mhahn{figure out how to make size of boxes large enough for text to fit in}%\mhahn{TODO make sure the language-specific morpheme slots such as ``Genitive'' and ``Clitic'' aren't confusing for the reader. One option is to color-code the slots here as in the figure(s) earlier.}
     }
     \label{fig:real_and_optimized_verbs}
 \end{figure}
